<resources>
    <string name="app_name">Custo da Gasolina</string>
    <string name="distance">Distância</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="calculate">CALCULAR</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price_per_litre">Preço por litro</string>
    <string name="kms_per_litre">KMs por litro</string>
    <string name="total_value">R$ 0</string>
    <string name="validation_fill_all_fields">Preencha todos os campos.</string>
</resources>